* Make `reUnNormalized` more procise and ensure client_api() doesn't pave the `data` argument in Firefox. [jddalton]

* unit test: Update Prototype and jQuery unit tests. [jddalton]

* Optimize getChildren() by using a do-while loop instead of a while loop. [jddalton]

* Ensure byClass() coerces element.className to a string before attempting indexOf() because SVG elements have a non-string value for `className`. [jddalton]

* Ensure normalize() performs a quote safe approach if a selector contains `[` or `(`. [jddalton]

* Only normalize selectors that contain edge case whitespace like \t, \n , \r, \f and consecutive spaces. [jddalton]

* Reorganize the definition order of some of the feature test flags. [jddalton]

* Make compileSelector() handle attribute case sensitivity properly. [jddalton]

* Make INSENSITIVE_TABLE defined by feature test instead of docType sniff because many pages are sent with the wrong mime type causing XHTML to be processed as invalid HTML. [jddalton]

* Make client_api() cache empty results. [jddalton]

* Enable dom result caching by fixing how mutation event bugs are handled and rename `BUGGY_QSAPI` to `RE_BUGGY_QSAPI`. [jddalton]

* Optimize client_api() cached performance when passing a callback. [jddalton]

* Optimize client_api() compiled/dom caching. [jddalton]

* Optimize how select_qsa() processes the elements returned from querySelectorAll(). [jddalton]

* Avoid using querySelectorAll() if a compiled selector exists. [jddalton]

* Remove the unnecessary `from` argument from the match() method. [jddalton]

* Make the match() method utilize the compiled cache better. [jddalton]

* Ensure the match() method validates the selector. [jddalton]

* Normalize selectors to reduce selector parsing complexity and improve compiled/dom caching memory footprints. [jddalton]

* Avoid setting the `elements` var in client_api() until necessary. [jddalton]

* Make the cache pause timeout equal to the `minCacheRest`. [jddalton]
